# algorithms

./: Array.cpp  Array.h  CMakeLists.txt  LICENSE  README.md
BSTree/: BSTree.cpp  BSTree.h  CMakeLists.txt
CP/: Array.cpp  Array.h  CMakeLists.txt  testing.cpp
CP/Test/: catch_amalgamated.cpp
Test/: catch_amalgamated.hpp  test.cpp
algorithms_lab_3/Test/: catch_amalgamated.cpp
lab_1/: CMakeLists.txt
lab_1/Test/: catch_amalgamated.hpp  test.cpp
lab_1/part_1/: List.cpp  List.h  Record.cpp  Record.h  Subcriber.cpp  Subcriber.h
lab_2/: Array.cpp  Array.h  CMakeLists.txt  Lab #2.drawio  To-Do  main.cpp
lab_2/Array/: Array.cpp  Array.h  testing_for_array.cpp
lab_2/Array/Data/: Record.cpp  Record.h  Subcriber.cpp  Subcriber.h
lab_2/Data/: Record.cpp  Record.h  Records.txt  Subcriber.cpp  Subcriber.h
lab_2/Data_Classes/: Record.cpp  Record.h  Records.txt  Subcriber.h
lab_2/List/: List.cpp  List.h  testing_for_list.cpp
lab_2/List/Data_Classes/: Record.cpp  Record.h  Subcriber.cpp  Subcriber.h
lab_2/Test/: test.cpp  testing_for_array.cpp  testing_for_containers.cpp  testing_for_list.cpp
lab_3/: Array.cpp  Array.h  CMakeLists.txt  Config.cpp  Config.h  main.cpp
lab_3./: CMakeLists.txt  List.cpp  List.h  List.hpp
lab_3./Data/: Record.cpp  Subcriber.h
lab_3./Test/: testing_for_containers.cpp
lab_3/Test/: test.cpp
lab_4/: CMakeLists.txt  Functions.h  List.cpp  List.h  List.hpp  Record.cpp  Record.h  Subcriber.cpp  Subcriber.h  main.cpp  Задание.txt
lab_4/List/: List.cpp  List.h
lab_4/Test/: test.cpp
lab_4/template/: List.h  List.hpp
lab_5/: Book.cpp  Book.h  CMakeLists.txt  Plain_Tree.cpp  Plain_Tree.h  Subscriber.cpp  Subscriber.h  Tree.cpp  Tree.h
lab_5/Test/: test.cpp
linked_list/: linked_list.py  node.py
